--- a/book/kfespn.html
+++ b/book/kfespn.html
@@ -35,7 +35,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-5eb7168a.js";
+            window.path_to_searchindex_js = "searchindex-92876d11.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-27bfd3e0.js"></script>
@@ -177,7 +177,7 @@
                         <h1 id="ke-faen-e-spn"><a class="header" href="#ke-faen-e-spn">Ke faen e SPN?</a></h1>
 <p><a href="https://isak.brunhenriksen.no/samtalerpanett">Samtaler På Nett</a> (SPN) er et nydelig chatte program laget av to alfaer med navn Isak Brun og Viggo Weiss. Det er skrevet i PHP og Javascript med bruk av biblioteket <a href="http://socketo.me/">Ratchet</a>.</p>
 <h2 id="hvem-er-samtaler-på-nett-laget-for"><a class="header" href="#hvem-er-samtaler-på-nett-laget-for">Hvem er Samtaler På Nett laget for?</a></h2>
-<p>Kule folk som ikke vil bli bannlyst på <a href="https://discord.com">Discord</a> for å BLI spammet.</p>
+<p>Kule folk som ikke vil bli bannlyst på <a href="https://discord.com">Discord</a> for å BLI spammet (de som vet).</p>
 <h2 id="er-det-et-seriøst-prosjekt"><a class="header" href="#er-det-et-seriøst-prosjekt">Er det et seriøst prosjekt?</a></h2>
 <p>Umm… Nei? Eller jo? Det er laget for gøy.</p>
 <h2 id="hvem-er-denne-bokendokumentasjonen-for"><a class="header" href="#hvem-er-denne-bokendokumentasjonen-for">Hvem er denne boken/dokumentasjonen for?</a></h2>
