--- a/book/databaseinclude.html
+++ b/book/databaseinclude.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduksjon - Samtaler På Nett Dokumentasjon</title>
+        <title>Database include fil - Samtaler På Nett Dokumentasjon</title>
 
 
         <!-- Custom HTML head -->
@@ -174,19 +174,53 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <h1 id="introduksjon"><a class="header" href="#introduksjon">Introduksjon</a></h1>
-<p>Hei, du snakker med Brun.</p>
-<p>Dette er dokumentasjon for Samtaler På Nett. Jeg skriver dette fordi det var lowkey et helvete å finne ut av hvordan faen jeg skulle fikse <a href="https://en.wikipedia.org/wiki/Reverse_proxy">reverse proxy</a> og <a href="https://en.wikipedia.org/wiki/WebSocket">websocket</a> og sånn drit, så da går det her.</p>
-<p>Det kommer nok andre ting her også. Om det kommer brukerveiledninger til de sikkert 2 brukerne vi kommer til å få, det vet jeg ikke, men det kan godt hende. @Øyvind kan vi få ekstra vurdering?</p>
+                        <h1 id="database-include-fil"><a class="header" href="#database-include-fil">Database include fil</a></h1>
+<p>Database include filen, som vi har kalt <code>db.inc.php</code>, ser slik ut:</p>
+<pre><code class="language-php">&lt;?php
+$db_server = ""; // f.eks 'localhost'
+$db_user = ""; // f.eks 'isak'
+$db_pass = ""; // f.eks 'passord01' (plis ikke)
+$db_name = ""; // f.eks samtalerpanett
+$conn = ""; // denne blir tom - variabelen blir bare declared her
+
+$protocol = (isset($_SERVER['HTTPS']) &amp;&amp; $_SERVER['HTTPS'] !== 'off') ? 'https' : 'http';
+$websocket_protocol = "ws";
+$wshostname = $_SERVER['host'];
+$wsport = 8080;
+$wsroute = "/chat";
+
+$conn = mysqli_connect($db_server, $db_user, $db_pass, $db_name);
+if (!$conn) {
+    die("Connection failed: " . mysqli_connect_error());
+}
+
+function dbConnection()
+{
+    $db_server = ""; // f.eks 'localhost'
+    $db_user = ""; // f.eks 'isak'
+    $db_pass = ""; // f.eks 'passord01' (plis ikke)
+    $db_name = ""; // f.eks samtalerpanett
+    $conn = "";
+
+    $conn = mysqli_connect($db_server, $db_user, $db_pass, $db_name);
+    if (!$conn) {
+        die("Connection failed: " . mysqli_connect_error());
+    }
+
+    return $conn;
+}
+</code></pre>
+<p>Dette er hvordan min ser ut, og jeg anbefaler at det er sånn din ser ut. All koden som er skrevet er skrevet basert på dette her, så variabel navnene må være lik, men strukturen trenger selvfølgelig ikke være det.</p>
+<p><em>Noe å notere: variablene <code>wshostname</code>, <code>wsport</code> og <code>wsroute</code> het det samme før men uten ‘ws’. Plis bruk disse variabelnavnene. Jeg vil veldig gjerne at setupet jeg har på serveren her er identisk setupet til alle contributors i Git - det gjør livet mitt så sykt mye lettere.</em></p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-
-                            <a rel="next prefetch" href="kfespn.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></span>
+                            <a rel="prev" href="kfespn.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></span>
                             </a>
+
 
                         <div style="clear: both"></div>
                     </nav>
@@ -194,10 +228,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-
-                    <a rel="next prefetch" href="kfespn.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></span>
+                    <a rel="prev" href="kfespn.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></span>
                     </a>
+
             </nav>
 
         </div>
