--- a/book/print.html
+++ b/book/print.html
@@ -36,10 +36,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-92876d11.js";
+            window.path_to_searchindex_js = "searchindex-a794731f.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-27bfd3e0.js"></script>
+        <script src="toc-cb3ddb2e.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -188,6 +188,45 @@
 <p>Umm… Nei? Eller jo? Det er laget for gøy.</p>
 <h2 id="hvem-er-denne-bokendokumentasjonen-for"><a class="header" href="#hvem-er-denne-bokendokumentasjonen-for">Hvem er denne boken/dokumentasjonen for?</a></h2>
 <p>Den er laget for folk som vil bidra til Samtaler På Nett (meg og viggo) og vil lære hvordan det funker. Også for megselv slik at jeg kan lettere fikse ting som <a href="https://en.wikipedia.org/wiki/Reverse_proxy">reverse proxy</a> hvis det plutselig sier pang og dreper segselv.</p>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="database-include-fil"><a class="header" href="#database-include-fil">Database include fil</a></h1>
+<p>Database include filen, som vi har kalt <code>db.inc.php</code>, ser slik ut:</p>
+<pre><code class="language-php">&lt;?php
+$db_server = ""; // f.eks 'localhost'
+$db_user = ""; // f.eks 'isak'
+$db_pass = ""; // f.eks 'passord01' (plis ikke)
+$db_name = ""; // f.eks samtalerpanett
+$conn = ""; // denne blir tom - variabelen blir bare declared her
+
+$protocol = (isset($_SERVER['HTTPS']) &amp;&amp; $_SERVER['HTTPS'] !== 'off') ? 'https' : 'http';
+$websocket_protocol = "ws";
+$wshostname = $_SERVER['host'];
+$wsport = 8080;
+$wsroute = "/chat";
+
+$conn = mysqli_connect($db_server, $db_user, $db_pass, $db_name);
+if (!$conn) {
+    die("Connection failed: " . mysqli_connect_error());
+}
+
+function dbConnection()
+{
+    $db_server = ""; // f.eks 'localhost'
+    $db_user = ""; // f.eks 'isak'
+    $db_pass = ""; // f.eks 'passord01' (plis ikke)
+    $db_name = ""; // f.eks samtalerpanett
+    $conn = "";
+
+    $conn = mysqli_connect($db_server, $db_user, $db_pass, $db_name);
+    if (!$conn) {
+        die("Connection failed: " . mysqli_connect_error());
+    }
+
+    return $conn;
+}
+</code></pre>
+<p>Dette er hvordan min ser ut, og jeg anbefaler at det er sånn din ser ut. All koden som er skrevet er skrevet basert på dette her, så variabel navnene må være lik, men strukturen trenger selvfølgelig ikke være det.</p>
+<p><em>Noe å notere: variablene <code>wshostname</code>, <code>wsport</code> og <code>wsroute</code> het det samme før men uten ‘ws’. Plis bruk disse variabelnavnene. Jeg vil veldig gjerne at setupet jeg har på serveren her er identisk setupet til alle contributors i Git - det gjør livet mitt så sykt mye lettere.</em></p>
 
                     </main>
 
