--- a/book/composerjson.html
+++ b/book/composerjson.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Verdt å nevne - Samtaler På Nett Dokumentasjon</title>
+        <title>Composer.json - Samtaler På Nett Dokumentasjon</title>
 
 
         <!-- Custom HTML head -->
@@ -174,31 +174,46 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <h1 id="verdt-å-nevne"><a class="header" href="#verdt-å-nevne">Verdt å nevne</a></h1>
-<p>Placeholders og honorable mentions</p>
-<h2 id="isaks-rant"><a class="header" href="#isaks-rant">Isaks rant</a></h2>
-<pre><code class="language-js">// TIL WIGGO OG MULIGE ANDRE UTVIKLERE I SAMTALER PÅ NETT:
-// hvis det ikke funker å laste opp profilbilde i det hele tatt og du bare får "kunne ikke flytte bildet" eller "feil under opplastning av fil"
-// så er det mest sannsynlig fordi webserveren (og andre brukere) ikke har skrivetilgang til uploads mappen. eller at uploads mappen ikke finnes i det hele tatt
-// hvis uploads mappen ikke finnes: LAG DEN! den heter bare 'uploads' og er i 'samtalerpanett' mappen.
-// hvordan gi webserveren skrivetilgang til uploads mappen: skriv 'chmod 777 uploads' i 'samtalerpanett' mappen. den kommandoen gir read, write og execute
-// tilgang til alle brukere.
-// vent... jeg vet ikke om dette er et problem på windows en gang... men hvis det er det, så er løsningen her i hvertfall! vet at det er et problem på ordentlige operativsystemer, altså, UNIX-baserte OS-er. - Isak 25/05/25 19:47
-// fant nettopp ut av at det ikke er et problem på windows :( jeg skrev hele den kommentaren for ingenting. vel ikke fjern den! jeg la så mye innsats inn i den!!!! - Isak 25/05/25 19:57
-// FUCK WINDOWS! nå er jeg frustrert på windows brukeres vegne. dette er unsafe design av microsoft! alle brukere har jo fanken i lanken meg tilgang til alle filer og mapper? hva er det for noe drit? det gjør at hvis du har et virus som kjører under sin egen bruker på pcen, så har den tilgang til alle filer på pcen? bro? hva faen tenkte microsoft på når de gjorde det på den måten? - Isak 25/05/25 20:07
+                        <h1 id="composerjson"><a class="header" href="#composerjson">Composer.json</a></h1>
+<p>Composer.json er en fil som forteller både <a href="https://getcomposer.org/">Composer</a> og mennesker som leser den litt informasjon om <a href="https://isak.brunhenriksen.no/samtalerpanett">Samtaler På Nett</a>. Den inneholder dependencies, navn, beskrivelse, forfattere og mer. Det er viktig at det ikke er noe feil om den, og at den er som den skal. Dette vil si: ikke fuck med den pls. Prøv å la Composer deale med alle insertions inn i den, og hvis det er noe du vil legge til så vennligst sjekk <a href="https://getcomposer.org/doc/04-schema.md">dokumentasjonen til Composer</a>.</p>
+<p>Slik ser vår <code>composer.json</code> ut:</p>
+<pre><code class="language-json">{
+    "require": {
+        "phpmailer/phpmailer": "^7.0",
+        "vlucas/phpdotenv": "^5.6",
+        "cboden/ratchet": "^0.4.4"
+    },
+
+    "license": "MIT",
+    "name": "isaveg/samtalerpanett",
+    "description": "Et fint chatteprogram laget av Brun og Weiss",
+    "type": "project",
+    "authors": [
+        {
+            "name": "Isak Brun Henriksen",
+            "email": "isak@brunhenriksen.net",
+            "homepage": "https://isak.brunhenriksen.no",
+            "role": "Developer"
+        },
+        {
+            "name": "Viggo Weissmuller",
+            "email": "veggene.v@gmail.com",
+            "homepage": "https://veggenss.github.io/MinSide2025/",
+            "role": "Developer"
+        }
+    ]
+}
+
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="databaseinclude.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="verdtanevne.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></span>
                             </a>
 
-                            <a rel="next prefetch" href="composerjson.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></span>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -206,13 +221,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="databaseinclude.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="verdtanevne.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></span>
                     </a>
 
-                    <a rel="next prefetch" href="composerjson.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></span>
-                    </a>
             </nav>
 
         </div>
