--- a/book/eksempelfiler.html
+++ b/book/eksempelfiler.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduksjon - Samtaler På Nett Dokumentasjon</title>
+        <title>Eksempel filer - Samtaler På Nett Dokumentasjon</title>
 
 
         <!-- Custom HTML head -->
@@ -174,19 +174,25 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <h1 id="introduksjon"><a class="header" href="#introduksjon">Introduksjon</a></h1>
-<p>Hei, du snakker med Brun.</p>
-<p>Dette er dokumentasjon for Samtaler På Nett. Jeg skriver dette fordi det var lowkey et helvete å finne ut av hvordan faen jeg skulle fikse <a href="https://en.wikipedia.org/wiki/Reverse_proxy">reverse proxy</a> og <a href="https://en.wikipedia.org/wiki/WebSocket">websocket</a> og sånn drit, så da går det her.</p>
-<p>Det kommer nok andre ting her også. Om det kommer brukerveiledninger til de sikkert 2 brukerne vi kommer til å få, det vet jeg ikke, men det kan godt hende. @Øyvind kan vi få ekstra vurdering?</p>
+                        <h1 id="eksempel-filer"><a class="header" href="#eksempel-filer">Eksempel filer</a></h1>
+<p>I Samtaler På Nett tar vi bruk av flere eksempel filer. Dette er eksempel configer på filer som er i .gitignore, som gjør det lettere for oss å sette opp Samtaler På Nett lokalt på en ny maskin om det trengs.</p>
+<p>Eksempel filene vi har så langt er:</p>
+<ul>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/js/setupwebsocket.example.js">setupwebsocket.js</a></li>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/include/db.inc.example.php">db.inc.example.php</a></li>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/mailer/mail.example.env">mail.example.env</a></li>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/WebSocket_error.example.log">websocket_error.example.log</a></li>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/webSocketLog.example.syslog">websocketlog.example.syslog</a></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-
-                            <a rel="next prefetch" href="kfespn.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></span>
+                            <a rel="prev" href="composerjson.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></span>
                             </a>
+
 
                         <div style="clear: both"></div>
                     </nav>
@@ -194,10 +200,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-
-                    <a rel="next prefetch" href="kfespn.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></span>
+                    <a rel="prev" href="composerjson.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></span>
                     </a>
+
             </nav>
 
         </div>
