--- a/book/print.html
+++ b/book/print.html
@@ -36,10 +36,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-bebc7b66.js";
+            window.path_to_searchindex_js = "searchindex-d649ee34.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-ef361018.js"></script>
+        <script src="toc-4224ad5b.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -273,6 +273,17 @@ function dbConnection()
 }
 
 </code></pre>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="eksempel-filer"><a class="header" href="#eksempel-filer">Eksempel filer</a></h1>
+<p>I Samtaler På Nett tar vi bruk av flere eksempel filer. Dette er eksempel configer på filer som er i .gitignore, som gjør det lettere for oss å sette opp Samtaler På Nett lokalt på en ny maskin om det trengs.</p>
+<p>Eksempel filene vi har så langt er:</p>
+<ul>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/js/setupwebsocket.example.js">setupwebsocket.js</a></li>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/include/db.inc.example.php">db.inc.example.php</a></li>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/mailer/mail.example.env">mail.example.env</a></li>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/WebSocket_error.example.log">websocket_error.example.log</a></li>
+<li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/webSocketLog.example.syslog">websocketlog.example.syslog</a></li>
+</ul>
 
                     </main>
 
