--- a/book/print.html
+++ b/book/print.html
@@ -36,10 +36,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-d649ee34.js";
+            window.path_to_searchindex_js = "searchindex-d21497ab.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-4224ad5b.js"></script>
+        <script src="toc-cb35019f.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -284,6 +284,16 @@ function dbConnection()
 <li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/WebSocket_error.example.log">websocket_error.example.log</a></li>
 <li><a href="https://github.com/veggenss/samtalerpaanett/blob/main/webSocketLog.example.syslog">websocketlog.example.syslog</a></li>
 </ul>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="setupwebsocketjs"><a class="header" href="#setupwebsocketjs">setupwebsocket.js</a></h1>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="dbincexamplephp"><a class="header" href="#dbincexamplephp">db.inc.example.php</a></h1>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="mailexampleenv"><a class="header" href="#mailexampleenv">mail.example.env</a></h1>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="websocket_errorexamplelog"><a class="header" href="#websocket_errorexamplelog">websocket_error.example.log</a></h1>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="websocketlogexamplesyslog"><a class="header" href="#websocketlogexamplesyslog">websocketlog.example.syslog</a></h1>
 
                     </main>
 
