fylt inn markdown sidene for eksempel filene med innholdet av filene. dette er for enklere kopiering - du kan liksom finne de her og yk

--- a/book/mailexampleenv.html
+++ b/book/mailexampleenv.html
@@ -35,10 +35,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-d21497ab.js";
+            window.path_to_searchindex_js = "searchindex-20a02e26.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-cb35019f.js"></script>
+        <script src="toc-04c33061.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -175,6 +175,13 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="mailexampleenv"><a class="header" href="#mailexampleenv">mail.example.env</a></h1>
+<pre><code class="language-yaml">MAIL_HOST=smtp.gmail.com
+MAIL_USERNAME=your.mail.here@domain.net
+MAIL_PASSWORD="yourpasswordhere"
+MAIL_PORT="someport"
+MAIL_ENCRYPTION="encryptionhere"
+
+</code></pre>
 
                     </main>
 
