--- a/book/setupwebsocketexamplejs.html
+++ b/book/setupwebsocketexamplejs.html
@@ -35,10 +35,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-d21497ab.js";
+            window.path_to_searchindex_js = "searchindex-20a02e26.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-cb35019f.js"></script>
+        <script src="toc-04c33061.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -175,6 +175,29 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="setupwebsocketjs"><a class="header" href="#setupwebsocketjs">setupwebsocket.js</a></h1>
+<pre><code class="language-js">function setupWebSocket() {
+    ws = new WebSocket(
+        "ws://localhost:8080/chat?userId=" + encodeURIComponent(currentUserId),
+    );
+
+    ws.onopen = () =&gt; {
+        console.log("Tilkobling til websocket åpnet :)");
+        ws.send(JSON.stringify({ type: "register", user_id: currentUserId }));
+    };
+
+    ws.onclose = () =&gt; {
+        console.log("Tilkobling til websocket lukket :(");
+        appendSystemMessage("Tilkoblingen ble lukket. :(");
+    };
+
+    ws.onmessage = (event) =&gt; {
+        const data = JSON.parse(event.data);
+        console.log(data);
+        appendMessage(data);
+        messagesDiv.scrollTop = messagesDiv.scrollHeight;
+    };
+}
+</code></pre>
 
                     </main>
 
