--- a/book/websocketerrorexamplelog.html
+++ b/book/websocketerrorexamplelog.html
@@ -35,10 +35,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-d21497ab.js";
+            window.path_to_searchindex_js = "searchindex-20a02e26.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-cb35019f.js"></script>
+        <script src="toc-04c33061.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -175,6 +175,7 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="websocket_errorexamplelog"><a class="header" href="#websocket_errorexamplelog">websocket_error.example.log</a></h1>
+<p>Denne eksempel filen er tom. Filen fylles inn dynamisk av webserveren når den får en error.</p>
 
                     </main>
 
