--- a/book/websocketlog.example.html
+++ b/book/websocketlog.example.html
@@ -35,10 +35,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-d21497ab.js";
+            window.path_to_searchindex_js = "searchindex-20a02e26.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-cb35019f.js"></script>
+        <script src="toc-04c33061.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -175,6 +175,17 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="websocketlogexamplesyslog"><a class="header" href="#websocketlogexamplesyslog">websocketlog.example.syslog</a></h1>
+<pre><code class="language-yaml">[2025/10/26 Sunday:17:22:00] User 37 | 70 has Connected
+[2025/10/26 Sunday:18:42:34] User 1 | 70 has Connected
+[2025/10/26 Sunday:18:42:45] User 1 | 70 has disconnected
+[2025/10/26 Sunday:18:42:45] User 1 | 111 has Connected
+[2025/10/26 Sunday:18:42:46] User 1 | 111 has disconnected
+[2025/10/26 Sunday:18:42:46] User 1 | 116 has Connected
+[2025/10/26 Sunday:18:43:24] User 1 | 116 has disconnected
+[2025/10/26 Sunday:18:43:24] User 1 | 121 has Connected
+[2025/10/26 Sunday:18:43:25] User 1 | 121 has disconnected
+[2025/10/26 Sunday:18:43:25] User 1 | 126 has Connected
+</code></pre>
 
                     </main>
 
