--- a/book/print.html
+++ b/book/print.html
@@ -36,7 +36,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-20a02e26.js";
+            window.path_to_searchindex_js = "searchindex-1a8b5e39.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-04c33061.js"></script>
@@ -343,7 +343,8 @@ MAIL_ENCRYPTION="encryptionhere"
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div>
 <h1 id="websocket_errorexamplelog"><a class="header" href="#websocket_errorexamplelog">websocket_error.example.log</a></h1>
-<p>Denne eksempel filen er tom. Filen fylles inn dynamisk av webserveren når den får en error.</p>
+<p>Denne eksempel filen er tom. Filen fylles inn dynamisk av webserveren når den får en error.
+Den sånn lowkey printer ikke ut shit da, men det går fint</p>
 <div style="break-before: page; page-break-before: always;"></div>
 <h1 id="websocketlogexamplesyslog"><a class="header" href="#websocketlogexamplesyslog">websocketlog.example.syslog</a></h1>
 <pre><code class="language-yaml">[2025/10/26 Sunday:17:22:00] User 37 | 70 has Connected
