--- a/book/websocketerrorexamplelog.html
+++ b/book/websocketerrorexamplelog.html
@@ -35,7 +35,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-20a02e26.js";
+            window.path_to_searchindex_js = "searchindex-1a8b5e39.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-04c33061.js"></script>
@@ -175,7 +175,8 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="websocket_errorexamplelog"><a class="header" href="#websocket_errorexamplelog">websocket_error.example.log</a></h1>
-<p>Denne eksempel filen er tom. Filen fylles inn dynamisk av webserveren når den får en error.</p>
+<p>Denne eksempel filen er tom. Filen fylles inn dynamisk av webserveren når den får en error.
+Den sånn lowkey printer ikke ut shit da, men det går fint</p>
 
                     </main>
 
